apps/web/src/components/Header/header.module.scss
@import '@/styles/variables.scss';

.container {
    display: grid;
    width: 100%;
    background: var(--accent-secondary-light);
    transition: 150ms ease-in-out background-color;
    border-bottom: var(--block-border-width) solid transparent;

    transition:
        150ms ease-in-out box-shadow,
        150ms ease-in-out border-color;

    @media (min-width: $breakpoint-tablet) {
        border-bottom-width: calc(var(--block-border-width) / 2);
    }
}

[data-scrolled='true'],
[data-menu-open='true'] {
    .container {
        border-bottom-color: var(--accent-secondary-dark);
        box-shadow: 0 1rem 1rem -0.75rem var(--color-block-shadow);
    }
}

.content {
    --header-height: 7rem;
    @media (min-width: $breakpoint-tablet) {
        --header-height: 6.5rem;
    }

    display: grid;
    grid-template-columns: 1fr auto 1fr;
    //grid-template-columns: 5rem auto 1fr;
    justify-content: space-between;
    align-items: center;
    gap: var(--block-spacer);
    max-width: var(--page-width);
    width: 100%;
    height: var(--header-height);
    padding: 0 var(--block-padding);
    margin: 0 auto;
    user-select: none;

    @media (min-width: $breakpoint-tablet) {
        padding: 0 var(--block-spacer-large);
        //grid-template-columns: 12rem 1fr auto;
        grid-template-columns: 1fr auto 1fr;
        gap: var(--block-spacer-large);
    }

    .logo {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100%;
        height: var(--header-height);
        user-select: none;
        text-align: left;

        .background {
            height: 5.5rem;
            padding: var(--block-padding-small) var(--block-padding);
            background-color: var(--accent-primary);
            border-radius: var(--block-border-radius);
            //mix-blend-mode: difference;
        }

        a {
            display: flex;
            justify-content: center;
            align-items: center;
            width: auto;
            height: calc(var(--header-height) - calc(calc(var(--block-padding) - 0.25rem) * 2));
            padding: calc(var(--block-padding) - 0.25rem);
            outline: none;
            border-radius: var(--block-border-radius);
            transition: 150ms ease-in-out background-color;

            @media (min-width: $breakpoint-tablet) {
                &:is(:hover, :focus, :focus-within) {
                    background-color: var(--accent-secondary);
                    outline: none;
                }
            }

            @media (min-width: $breakpoint-tablet) {
                height: 4rem;
                transform: translateX(calc(calc(var(--block-padding) - 0.25rem) * -1));
                //transform-origin: left;
                //transform: perspective(10rem)
                //    translate3d(calc(calc(var(--block-padding) - 0.25rem) * -1), 0px, -3.75rem);
            }

            img {
                backface-visibility: visible;
                height: 100%;
                width: auto;
                object-fit: contain;
                object-position: left;
            }
        }
    }

    .cart-indicator {
        position: absolute;
        display: flex;
        justify-content: center;
        align-items: center;
        right: calc(var(--block-spacer-small) * -1);
        top: calc(var(--block-spacer-small) * -1);
        height: 2rem;
        width: 2rem;
        aspect-ratio: 1 / 1;

        background: var(--accent-secondary);
        color: var(--accent-secondary-text);
        border-radius: 100%;

        pointer-events: none;

        @media (min-width: $breakpoint-tablet) {
            right: calc(var(--block-spacer-small) * -0.5);
            top: calc(var(--block-spacer-small) * -0.5);
        }
    }

    .actions {
        display: flex;
        justify-content: flex-end;
        align-items: center;
        gap: 0;

        @media (min-width: $breakpoint-tablet) {
            gap: calc(var(--block-spacer) * 2);
        }

        .SearchBar {
            max-width: 24rem;

            input {
                height: 100%;
                border-radius: var(--block-border-radius);
                color: var(--color-dark);
            }
        }

        .action {
            position: relative;
            display: flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            height: 100%;
            padding: 0 0.75rem;
            aspect-ratio: 1 / 1;

            color: var(--accent-secondary-text);
            cursor: pointer;
            transition: 150ms all ease-in-out;

            line-height: 1.25rem;
            font-weight: 600;
            font-size: 3rem;

            @media (min-width: $breakpoint-tablet) {
                aspect-ratio: unset;
                font-size: 2.5rem;
            }

            svg {
                font-size: inherit;
                stroke-width: 2.25;
            }

            &:empty {
                display: none;
            }

            @media (hover: hover) and (pointer: fine) {
                &:hover {
                    color: var(--accent-primary);
                }
            }

            &.active {
                padding: 0 var(--block-padding);
                color: var(--accent-secondary-light);
                background: var(--accent-primary);
                border-radius: var(--block-border-radius);

                @media (hover: hover) and (pointer: fine) {
                    &:hover {
                        background: var(--accent-secondary);
                        color: var(--accent-secondary-text);
                    }
                }
            }
        }
    }
}

